// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DealStatusIcon /> Active renders the component 1`] = `
<div>
  <div
    class="sc-AxjAm gNGPFX"
  />
</div>
`;

exports[`<DealStatusIcon /> Active renders the component 2`] = `
<div>
  <div
    class="sc-AxjAm wieiO"
  />
</div>
`;

exports[`<DealStatusIcon /> Active renders the component 3`] = `
<div>
  <div
    class="sc-AxjAm eeLvrn"
  />
</div>
`;

exports[`<DealStatusIcon /> Fail renders the component 1`] = `
<div>
  <div
    class="sc-AxjAm coWhuT"
  />
</div>
`;
